--- a/raconteur/RCSlideEditorView.xib
+++ b/raconteur/RCSlideEditorView.xib
@@ -111,7 +111,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <color key="color" red="0.05813049898" green="0.055541899059999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
-                                    <binding destination="-2" name="value" keyPath="currentSlide.options.foregroundColor" id="kpf-0M-zIN"/>
+                                    <binding destination="-2" name="value" keyPath="currentSlide.options.foregroundColor" id="xHU-L7-Ohc"/>
                                 </connections>
                             </colorWell>
                             <colorWell id="F99-Tm-4UO">
